--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <section class="page-section portfolio">
-        <div class="container">
-            <a class="btn btn-xl btn-primary" onclick="restart();">
+        <div class="container" style="width: 300px;">
+            <a class="btn btn-l btn-primary" onclick="restart();">
                 Restart
             </a>
             <div class="row justify-content-center">
